--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@microsoft/applicationinsights-web": "^2.8.6",
+    "@react-three/fiber": "^8.9.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/lodash.partition": "^4.6.6",
     "@types/raf-schd": "^4.0.1",
@@ -36,6 +37,7 @@
     "react-tooltip": "^4.2.21",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5",
+    "three": "^0.146.0",
     "ts-node": "^10.4.0",
     "use-resize-observer": "^8.0.0",
     "via-keyboards": "https://github.com/the-via/keyboards.git",
