--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@microsoft/applicationinsights-web": "^2.8.6",
+    "@react-spring/three": "^9.5.5",
+    "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/lodash.partition": "^4.6.6",
@@ -61,6 +63,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/snowpack-env": "^2.3.3",
     "@types/styled-components": "^5.1.11",
+    "@types/three": "^0.144.0",
     "@types/w3c-web-hid": "^1.0.1",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.1",
     "@web/test-runner": "^0.13.3",
